--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,6 +1,11 @@
-<h1>Static#index</h1>
-<p>Find me in app/views/static/index.html.erb</p>
-<h1>This is static#index</h1>
-<div class="bg-red-500 w-3/4 mx-auto p-4">
-  <p class="text-white text-2xl">Test test test</p>
+<div class="red-card">
+  <p>Test test test 1</p>
+</div>
+
+<div class="red-card">
+  <p>Test test test 2</p>
+</div>
+
+<div class="red-card ">
+  <p>Test test test 3 bonjour bonjour</p>
 </div>
