--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -6,7 +6,7 @@
 
 @layer components {
 .red-card {
-  @apply bg-red-500 my-4 w-3/4 mx-auto p-4;
+  @apply bg-primary-500 my-4 w-3/4 mx-auto p-4;
 }
 
 .red-card p {
