--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
   </head>
 
   <body>
+    <!-- Devise Message -->
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <!-- End Devise Message -->
+    
     <%= yield %>
   </body>
 </html>
