Added navbar/partial + js

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -5,11 +5,48 @@
 
 
 @layer components {
-.red-card {
-  @apply bg-primary-500 my-4 w-3/4 mx-auto p-4;
 }
 
-.red-card p {
-  @apply text-white text-2xl;
+html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+.nav-links { 
+  position: relative;
+  z-index: 1; 
+  top: 0;
+  padding-bottom: 1.5rem;
+}
+
+.hamburger {
+  fill: #6dd5be; 
+}
+
+.hamburger:hover,
+.hamburger:active {
+  fill: #31ab90;
+  outline-color: #31ab90;
+}    
+
+#nav-toggle{ 
+  outline-color: #afe8db;
+}
+
+#nav-toggle:focus,
+#nav-toggle:active {
+  outline-color: #afe8db;
+}
+@media (min-width: 640px) {
+  .nav-links:after {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 1px;
+    width: 100%;
+    /* or 100px */
+    border-bottom: 8px solid #6dd5be;
+  }  
 }
