--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
 
     
 
-		<div class="w-full block sm:flex-grow sm:flex-row-reverse sm:flex sm:items-center sm:w-auto hidden sm:block sm:pt-0 relative pr-8 sm:pr-0 bg-gradient-to-r from-primary-400 to-primary-100 sm:bg-transparent rounded-3xl sm:rounded-none sm:bg-gradient-to-r sm:from-transparent sm:to-transparent" id="nav-content">
+		<div class="w-full block sm:flex-grow sm:flex-row-reverse sm:flex sm:items-center sm:w-auto sm:pt-0 relative pr-8 sm:pr-0 bg-gradient-to-r from-primary-400 to-primary-100 sm:bg-transparent rounded-3xl sm:rounded-none sm:bg-gradient-to-r sm:from-transparent sm:to-transparent" id="nav-content">
 			<div class="nav-links sm:flex sm:-mr-10">
 				<ul class="list-reset sm:flex justify-end flex-1 items-center sm:mr-5">
 					<li class="sm:mr-8 mt-4 font-semibold hover:text-primary-500">
