--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,7 +29,7 @@
 			
 					</li>
 					<li class="sm:mr-8 mt-4 -mr-3">
-					<%= link_to "Déconnexion", root_path, class:"bg-primary-600 hover:bg-primary-800 rounded-full py-2 px-4 text-sm no-underline text-white hover:text-blue-dark ml-2" %>
+					<%= link_to "Déconnexion", destroy_user_session_path, method: "delete", class:"bg-primary-600 hover:bg-primary-800 rounded-full py-2 px-4 text-sm no-underline text-white hover:text-blue-dark ml-2" %>
 					</li>
 				</ul>
 			</div>
