--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer md:text-base md:justify-between md:h-20">
+<footer class="footer md:text-base md:justify-between md:h-20 py-8">
 
   <p></p>
   <p>Made with <span style="color: red;">&#9829;</span> by les Perruches</p>
