--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="flex items-center text-right justify-between flex-wrap bg-grey-darkest  fixed w-full z-10 pin-t mt-2 ">
+<nav class="flex items-center text-right justify-between flex-wrap bg-grey-darkest  fixed w-full z-10 pin-t mt-2 mb-6">
 	<div class="mb-2 sm:mb-0">
     <div class="ml-3 mt-2">
     	<%= image_tag("logo_meal.png", size: "44x44") %>
