--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <div class="flex flex-col max-w-screen h-screen justify-between">
   <%= render "layouts/navbar" %>
     
     <!-- Devise Message -->
@@ -24,5 +25,6 @@
     
     <%= yield %>
     <%= render "layouts/footer" %>
+    </div>
   </body>
 </html>
