Modif img index

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -12,11 +12,11 @@
     </div>
 
     <div class="right-page">
-      <%= image_tag 'chef', class: "chief"%>
+      <%= image_tag 'chef.svg', class: "chief"%>
     </div>
   </div>
 
   <!--Timeline-->
-  <%= image_tag 'timeline-web', class: "tlweb"%>
+  <%= image_tag 'timeline-web.svg', class: "tlweb"%>
   
 </div>
