alert are centered, navbar for user session & lead is shorter

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
   <%= render "layouts/navbar" %>
     
     <!-- Devise Message -->
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <p class="notice text-center"><%= notice %></p>
+    <p class="alert text-center"><%= alert %></p>
     <!-- End Devise Message -->
     
     <%= yield %>
