--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
-<nav class="flex items-center text-right justify-between flex-wrap bg-grey-darkest  fixed w-full z-10 pin-t mt-2 mb-6">
-	<div class="mb-2 sm:mb-0">
+<nav class="flex items-center text-right justify-between flex-wrap bg-grey-darkest w-full z-10 pin-t mt-2 ">
+	<div class="md:mb-2 mb-0">
     <div class="ml-3 mt-2">
-    	<%= image_tag("logo_meal.png", size: "44x44") %>
+    	<%= image_tag("logo_meal.png", size: "48x48") %>
     </div>
   </div>
     
@@ -12,9 +12,9 @@
 			</button>
 		</div>
 
-    
-
-		<div class="w-full block sm:flex-grow sm:flex-row-reverse sm:flex sm:items-center sm:w-auto sm:pt-0 relative pr-8 sm:pr-0 bg-gradient-to-r from-primary-400 to-primary-100 sm:bg-transparent rounded-3xl sm:rounded-none sm:bg-gradient-to-r sm:from-transparent sm:to-transparent" id="nav-content">
+        <!-- When user is connected -->
+    <% if current_user %>
+    <div class="w-full block sm:flex-grow sm:flex-row-reverse sm:flex sm:items-center sm:w-auto sm:pt-0 relative pr-8 sm:pr-0 bg-gradient-to-r from-primary-400 to-primary-100 sm:bg-transparent rounded-3xl sm:rounded-none sm:bg-gradient-to-r sm:from-transparent sm:to-transparent" id="nav-content">
 			<div class="nav-links sm:flex sm:-mr-10">
 				<ul class="list-reset sm:flex justify-end flex-1 items-center sm:mr-5">
 					<li class="sm:mr-8 mt-4 font-semibold hover:text-primary-500">
@@ -33,7 +33,25 @@
 					</li>
 				</ul>
 			</div>
+      
 		</div>
+		
+      <!-- When user is not connected -->
+      <% else %>
+    <div class="w-full block sm:flex-grow sm:flex-row-reverse sm:flex sm:items-center sm:w-auto sm:pt-0 relative pr-8 sm:pr-0 bg-gradient-to-r from-primary-400 to-primary-100 sm:bg-transparent rounded-3xl sm:rounded-none sm:bg-gradient-to-r sm:from-transparent sm:to-transparent" id="nav-content">
+			<div class="nav-links sm:flex sm:-mr-10">
+				<ul class="list-reset sm:flex justify-end flex-1 items-center sm:mr-5">
+
+					<li class="sm:mr-8 mt-4 font-semibold hover:text-primary-500">
+					<%= link_to "Se connecter", new_user_session_path, class:"text-lg"%>
+					</li>
+
+					<li class="sm:mr-8 mt-4 -mr-3">
+					<%= link_to "Inscription", new_user_registration_path, class:"font-bold bg-primary-600 hover:bg-primary-800 rounded-full py-2 px-4 text-sm no-underline text-white hover:text-blue-dark ml-2" %>
+					</li>
+				</ul>
+			</div>
+    <% end %>
 	</nav>
 	
 <!-- hamburger menu toggle-->
