--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -10,9 +10,15 @@ body {
   background-position-y: 5%;
   background-repeat: no-repeat;
   background-size: auto;
+  overflow-x: hidden;
 }
 
 .chief {
   height: 560px;
   width:468;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
 }
