--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,9 @@
 <nav class="flex items-center text-right justify-between flex-wrap bg-grey-darkest w-full z-10 pin-t mt-2 ">
 	<div class="md:mb-2 mb-0">
     <div class="ml-3 mt-2">
+      <%=link_to root_path do%>
     	<%= image_tag("logo_meal.png", size: "48x48") %>
+      <% end %>
     </div>
   </div>
     
