Adding highlight effect, welcome partial and remove background

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -3,15 +3,15 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 
-body {
-  min-height: 100%;
-  background-image: image-url('bg-land.svg');
-  background-position-x: 10%;
-  background-position-y: 5%;
-  background-repeat: no-repeat;
-  background-size: auto;
-  overflow-x: hidden;
-}
+// body {
+//   min-height: 100%;
+//   background-image: image-url('bg-land.svg');
+//   background-position-x: 10%;
+//   background-position-y: 5%;
+//   background-repeat: no-repeat;
+//   background-size: auto;
+//   overflow-x: hidden;
+// }
 
 .chief {
   height: 560px;
