--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,19 +19,19 @@
     <div class="w-full block sm:flex-grow sm:flex-row-reverse sm:flex sm:items-center sm:w-auto sm:pt-0 relative pr-8 sm:pr-0 bg-gradient-to-r from-primary-400 to-primary-100 sm:bg-transparent rounded-3xl sm:rounded-none sm:bg-gradient-to-r sm:from-transparent sm:to-transparent" id="nav-content">
 			<div class="nav-links sm:flex sm:-mr-10">
 				<ul class="list-reset sm:flex justify-end flex-1 items-center sm:mr-5">
-					<li class="sm:mr-8 mt-4 font-semibold hover:text-primary-500">
+					<li class="sm:mr-8 mt-4 font-semibold highlight">
 						<%= link_to "Menu", root_path, class:"text-lg"%>
 					</li>
-					<li class="sm:mr-8 mt-4 font-semibold hover:text-primary-500">
+					<li class="sm:mr-8 mt-4 font-semibold highlight">
 					<%= link_to "A propos", root_path, class:"text-lg"%>
 						
 					</li>
-					<li class="sm:mr-8 mt-4 font-semibold hover:text-primary-500">
+					<li class="sm:mr-8 mt-4 font-semibold highlight">
 					<%= link_to "Profil", root_path, class:"text-lg"%>
 			
 					</li>
 					<li class="sm:mr-8 mt-4 -mr-3">
-					<%= link_to "Déconnexion", destroy_user_session_path, method: "delete", class:"bg-primary-600 hover:bg-primary-800 rounded-full py-2 px-4 text-sm no-underline text-white hover:text-blue-dark ml-2" %>
+					<%= link_to "Déconnexion", destroy_user_session_path, method: "delete", class:"bg-primary-600 font-bold hover:bg-primary-800 rounded-full py-2 px-4 text-sm no-underline text-white hover:text-blue-dark ml-2" %>
 					</li>
 				</ul>
 			</div>
