--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div class="flex flex-col max-w-screen h-screen justify-between">
+    <div class="flex flex-col max-w-full h-screen justify-between">
   <%= render "layouts/navbar" %>
     
     <!-- Devise Message -->
