--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="grid min-h-screen place-items-center  mt-6">
+  <div class="w-gul p-12 form_wrapper sm:w-8/12 md:w-1/2 lg:w-3/12  shadow-2xl mb-12 bg-primary-200 rounded-lg">
+    <h1 class="text-4xl	 font-bold text-center"> <span class="umbo-header text-lb:text-6xl ">Mot de passe oublié</span></h1>    
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="field mt-10">
+          <%= f.email_field :email, autofocus: true, placeholder: 'Email', autocomplete: "email", class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
+          <br />
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="actions flex justify-center   ">
+          <%= f.submit "Envoyez", class:" block w-full mt-5 bg-primary-500 hover:bg-primary-400 py-4 px-6 block rounded-xl text-white cursor-pointer font-black" %>
+        </div>
+
+    <% end %>
+
+    <%= render "devise/shared/links" %>
+
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
