overflox-x hidden, text changed under timeline and add hightlight to navbar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -44,7 +44,7 @@
 			<div class="nav-links sm:flex sm:-mr-10">
 				<ul class="list-reset sm:flex justify-end flex-1 items-center sm:mr-5">
 
-					<li class="sm:mr-8 mt-4 font-semibold hover:text-primary-500">
+					<li class="mr-5 mt-4 font-semibold highlight">
 					<%= link_to "Se connecter", new_user_session_path, class:"text-lg"%>
 					</li>
 
