--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -26,6 +26,6 @@
   <div class="flex justify-around md:justify-between lg:justify-around  mb-5">
     <p class="md:ml-28 lg:-ml-16 xl:ml-0 2xl:ml-28">Inscris-toi</p>
     <p class="content md:hidden"></p>
-    <p class="md:mr-20 lg:-mr-24 xl:-mr-10 2xl:mr-20">Plus qu'à déguster !</p>
+    <p class="md:mr-20 lg:-mr-24 xl:-mr-10 2xl:mr-20">On prépare ton menu !</p>
   </div>
 </div>
