Fixed typo in registration form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,12 +11,12 @@
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         
             <div class="field mt-10 ">
-              <%= f.text_field :firstname, autofocus: true, placeholder: 'Prénom', class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	"%>
+              <%= f.text_field :firstName, autofocus: true, placeholder: 'Prénom', class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	"%>
               <br />
             </div>
 
             <div class="field ">
-              <%= f.text_field :lastname, autofocus: true, placeholder: 'Nom', class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
+              <%= f.text_field :lastName, autofocus: true, placeholder: 'Nom', class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
               <br />
             </div>
 
