Adding plans view

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -12,7 +12,7 @@
     </div>
 
     <div class="right-page">
-      <%= image_tag 'chef.svg', class: "chief"%>
+      <%= image_tag 'chef.svg', class: "chief lg:mt-10"%>
     </div>
   </div>
 
