--- a/app/views/users/plans/_welcome.html.erb
+++ b/app/views/users/plans/_welcome.html.erb
@@ -1,4 +1,4 @@
-<div class="flex shadow md:flex-row md:items-center justify-around">
+<div class="flex shadow md:flex-row md:items-center justify-around mt-24 md:mt-32">
 
   <div class="text-left flex flex-col md:text-left mt-5">
   <h1 class="text-3xl md:text-4xl lg-text-5xl font-serif font-bold ">Bonjour <span class="text-primary-500">Michel,</span></h1>
