--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -23,3 +23,14 @@ html {
   min-height: 100%;
   overflow-x: hidden;
 }
+
+.clock {
+  height:25px;
+  width: 25px;
+}
+
+.calorie {
+  height:25px;
+  width: 25px;
+}
+
