--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -14,7 +14,7 @@ body {
 
 .chief {
   height: 560px;
-  width:468;
+  width: 468px;
 }
 
 html {
@@ -32,4 +32,3 @@ html {
   height:25px;
   width: 25px;
 }
-
