--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer md:text-base md:justify-between md:h-20 py-8">
 
   <p></p>
-  <p>Made with <span style="color: red;">&#9829;</span> by les Perruches</p>
+  <p class="ml-48">Made with <span style="color: red;">&#9829;</span> by les Perruches</p>
 
   <p>Mealories © 2020</p>
 
