--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -9,35 +9,34 @@
     </div>
 
       <!-------right-page----->
-    <div class="text-gray-700 bg-white shadow-lg rounded-md">
-      <div class="lg:w-4/6 mx-auto">
+    <div class="text-gray-700 bg-white shadow-lg rounded-md relative -mt-20 md:mt-0">
+      <div class="lg:w-full mx-5 md:mx-auto">
         <div class="flex flex-col sm:flex-row">
               <!----card-left-->
           <div class="w-1/3 md:w-1/2 text-center sm:pr-8 sm:py-8 ml-24 md:ml-0">
             <div class="flex flex-col items-center justify-center">
-              <h2 class=" mt-4 text-gray-900 text-lg"><span class="text-primary-500 font-bold uppercase">Nom</span> Prénom</h2>
+              <h2 class=" mt-4 text-gray-900 text-lg"><span class="text-primary-500 font-bold uppercase"><%= @user.last_name %></span> <%= @user.first_name%></h2>
               <div class="w-12 h-1 bg-yellow-500 rounded mt-2 mb-4"></div>
   
               <ul class="text-base text-gray-600">
-              <li><span class="font-bold">Sexe :</span> Lorem</li>
-              <li><span class="font-bold">Âge :</span> 24</li>
-              <li><span class="font-bold">E-mail :</span> example@example.com</li>
+              <li><span class="font-bold">Sexe :</span><%= @user.gender%></li>
+              <li><span class="font-bold">Âge :</span><%= @user.age%></li>
+              <li><span class="font-bold">E-mail :</span><%= @user.email%></li>
               </ul>
+              <%= link_to 'Modifier compte',edit_user_registration_path, class:"text-white  bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-1 py-1 md:mt-3 rounded outline-none focus:outline-none mr-1 mb-1" ,type:"button", style:"transition: all .15s ease" %>
+
             </div>
           </div>
           <!----card-right-->
           <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-300 sm:border-t-0  border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
             <ul class="leading-relaxed text-lg mb-4">
-            <li><span class="font-bold">Taille :</span> 181 cm</li>
-            <li><span class="font-bold">Poids :</span> 72 kg</li>
-            <li><span class="font-bold">Activité :</span> Sportif</li>
-            <li><span class="font-bold">Objectif :</span> Garder la ligne</li>
+            <li><span class="font-bold">Taille :</span><%= @user.height_in_cms%> cm</li>
+            <li><span class="font-bold">Poids :</span><%= @user.weight_in_kgs%> kg</li>
+            <li><span class="font-bold">Activité :</span><%= @user.activity_level%></li>
+            <li><span class="font-bold">Objectif :</span><%= @user.objective%></li>
             <li><span class="font-bold">Besoin journalier :</span> 2700 kcal
             </li>
             </ul>
-              <button class="text-white  bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-3 py-2 rounded outline-none focus:outline-none mr-1 mb-1" type="button" style="transition: all .15s ease">
-               Modifier
-              </button>
            </div>
         </div>
       </div>
