Plan & Days creation is working

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,7 +20,7 @@
 			<div class="nav-links sm:flex sm:-mr-10">
 				<ul class="list-reset sm:flex justify-end flex-1 items-center sm:mr-5">
 					<li class="sm:mr-8 mt-4 font-semibold highlight">
-						<%= link_to "Menu", root_path, class:"text-lg"%>
+						<%= link_to "Menu", new_plan_path, class:"text-lg"%>
 					</li>
 					<li class="sm:mr-8 mt-4 font-semibold highlight">
 					<%= link_to "A propos", root_path, class:"text-lg"%>
@@ -58,4 +58,3 @@
 	
 <!-- hamburger menu toggle-->
 	<%= javascript_pack_tag 'navbar' %> 
-
