--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -14,6 +14,11 @@ body {
 .chief {
   height: 560px;
   width: 468px;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 html {
@@ -30,4 +35,12 @@ html {
 .calorie {
   height:25px;
   width: 25px;
+}
+
+.tlweb {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
