--- a/app/views/layouts/_card_recipe.html.erb
+++ b/app/views/layouts/_card_recipe.html.erb
@@ -1,4 +1,5 @@
-<div class="card ">
+<div class="card">
+<h1 class="text-center text-lg font-semibold highlightstatic">Repas 1</h1>
   <div class=" bg-gray-200 w-48 mr-5 rounded">
     <img src="https://images.unsplash.com/photo-1568901346375-23c9450c58cd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1202&q=80" class="rounded ">
   <div class=" py-4 px-3">
@@ -18,3 +19,4 @@
       </div>
     </div>
   </div>
+</div>
