--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,6 +4,7 @@
       <%=link_to root_path do%>
     	<%= image_tag("logo_meal.png", size: "48x48") %>
       <% end %>
+      <h1 class="font-semibold select-none"><span class="text-primary-500">M</span>ealories</h1>
     </div>
   </div>
     
@@ -27,7 +28,7 @@
 						
 					</li>
 					<li class="sm:mr-8 mt-4 font-semibold highlight">
-					<%= link_to "Profil", root_path, class:"text-lg"%>
+					<%= link_to "Profil", current_user, class:"text-lg"%>
 			
 					</li>
 					<li class="sm:mr-8 mt-4 -mr-3">
