--- a/app/views/users/plans/show.html.erb
+++ b/app/views/users/plans/show.html.erb
@@ -1,3 +1,33 @@
 <div class="container mx-auto mb-auto">
-
+  <%= render "users/users/welcome"%>
+  <p class="mt-5 ml-5 md:ml-0">Généré le : 03/12/2020</p>
+        <!---card organization-->
+  <div class="days flex items-center justify-center">
+    <div class="mt-10 mr-1 md:mt-12">
+      <i class="fas fa-angle-left fa-3x contents lg:hidden "></i>
+    </div>
+      	<!-- day cards start -->
+	  <div class="flex shadow-md divide-x divide-primary-700 mt-10 md:mt-14 lg:mt-16">
+      <button class="bg-white flex flex-col items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-gray-50 hover:text-primary-500 hover:font-bold focus:outline-none focus:bg-gray-50 focus:text-primary-500 focus:font-bol">Jour 1 <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
+      <i class="far fa-calendar-alt contents md:hidden"></i></button>
+      <button class="bg-white flex flex-col items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-gray-50 hover:text-primary-500 hover:font-bold focus:outline-none focus:bg-gray-50 focus:text-primary-500 focus:font-bol">Jour 2 <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
+      <i class="far fa-calendar-alt contents md:hidden"></i></button>
+      <button class="bg-white flex flex-col items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-gray-50 hover:text-primary-500 hover:font-bold focus:outline-none focus:bg-gray-50 focus:text-primary-500 focus:font-bol">Jour 3 <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
+      <i class="far fa-calendar-alt contents md:hidden"></i></button>
+      <button class="bg-white flex flex-col items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-gray-50 hover:text-primary-500 hover:font-bold focus:outline-none focus:bg-gray-50 focus:text-primary-500 focus:font-bol">Jour 4 <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
+      <i class="far fa-calendar-alt contents md:hidden"></i></button>
+      <button class="bg-white flex flex-col items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-gray-50 hover:text-primary-500 hover:font-bold focus:outline-none focus:bg-gray-50 focus:text-primary-500 focus:font-bol">Jour 5 <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
+      <i class="far fa-calendar-alt contents md:hidden"></i></button>
+    </div>
+    
+	        <!-- day cards end  -->
+    <div class="mt-10 ml-1 md:mt-12">
+      <i class="fas fa-angle-right fa-3x contents lg:hidden "></i>
+    </div>
+  </div>
+        <!---menu cards start-->
+  <div class="flex flex-row items-center justify-center ml-5 mt-16 mb-5">
+    <%= render 'layouts/card_recipe'%>
+    <%= render 'layouts/card_recipe'%>
+  </div>
 </div>
