--- a/app/views/users/plans/show.html.erb
+++ b/app/views/users/plans/show.html.erb
@@ -8,16 +8,9 @@
     </div>
       	<!-- day cards start -->
 	  <div class="flex shadow-md divide-x divide-primary-700 mt-10 md:mt-14 lg:mt-16">
-      <button class="bg-white flex flex-col items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-gray-50 hover:text-primary-500 hover:font-bold focus:outline-none focus:bg-gray-50 focus:text-primary-500 focus:font-bol">Jour 1 <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
-      <i class="far fa-calendar-alt contents md:hidden"></i></button>
-      <button class="bg-white flex flex-col items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-gray-50 hover:text-primary-500 hover:font-bold focus:outline-none focus:bg-gray-50 focus:text-primary-500 focus:font-bol">Jour 2 <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
-      <i class="far fa-calendar-alt contents md:hidden"></i></button>
-      <button class="bg-white flex flex-col items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-gray-50 hover:text-primary-500 hover:font-bold focus:outline-none focus:bg-gray-50 focus:text-primary-500 focus:font-bol">Jour 3 <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
-      <i class="far fa-calendar-alt contents md:hidden"></i></button>
-      <button class="bg-white flex flex-col items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-gray-50 hover:text-primary-500 hover:font-bold focus:outline-none focus:bg-gray-50 focus:text-primary-500 focus:font-bol">Jour 4 <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
-      <i class="far fa-calendar-alt contents md:hidden"></i></button>
-      <button class="bg-white flex flex-col items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-gray-50 hover:text-primary-500 hover:font-bold focus:outline-none focus:bg-gray-50 focus:text-primary-500 focus:font-bol">Jour 5 <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
-      <i class="far fa-calendar-alt contents md:hidden"></i></button>
+      <%= @plan.days.lenght.time do %>
+      <%= render "users/days/days"%>
+      <% end %>
     </div>
     
 	        <!-- day cards end  -->
@@ -25,9 +18,10 @@
       <i class="fas fa-angle-right fa-3x contents lg:hidden "></i>
     </div>
   </div>
-        <!---menu cards start-->
+        <!--menu cards start-->
   <div class="flex flex-row items-center justify-center ml-5 mt-16 mb-5">
-    <%= render 'layouts/card_recipe'%>
-    <%= render 'layouts/card_recipe'%>
+    <%= @recipes.each do |recipe| %>
+    <%= render 'users/days/card_recipe', recipe: recipe%>
+    <% end %>
   </div>
 </div>
