Number of cards connected with back

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -30,7 +30,10 @@ html {
     width: 25px;
 }
 
-.calorie {}
+.calorie {
+    height: 25px;
+    width: 25px;
+}
 
 .tlweb {
     user-select: none;
