--- a/app/views/users/days/_days.html.erb
+++ b/app/views/users/days/_days.html.erb
@@ -1,2 +1,2 @@
-<button class="bg-white flex flex-col items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-gray-50 hover:text-primary-500 hover:font-bold focus:outline-none focus:bg-gray-50 focus:text-primary-500 focus:font-bol">Jour 1 <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
+<button class="flex shadow-md flex-col rounded-lg mx-1 items-center justify-center w-16 h-16 md:w-28 md:h-20 text-sm font-medium hover:bg-primary-800 hover:text-white hover:font-bold hover:shadow-lg focus:outline-none focus:bg-gray-50 focus:text-primary-500 bg-gray-100 focus:font-bol">Jour <%= idx + 1 %> <i class="far fa-calendar-alt fa-2x hidden md:contents"></i>
 <i class="far fa-calendar-alt contents md:hidden"></i></button>
