user show connected with real values and adding partials + edit

--- a/app/views/users/users/_welcomeedit.html.erb
+++ b/app/views/users/users/_welcomeedit.html.erb
@@ -2,7 +2,7 @@
 
   <div class="text-left flex flex-col md:text-left mt-5">
   <h1 class="text-3xl md:text-4xl lg-text-5xl font-serif font-bold ">Bonjour <span class="text-primary-500"><%= current_user.first_name %>,</span></h1>
-  <p class="text-xl md:text-2xl lg:text-3xl font-semibold">Bienvenue sur ton profil</p>
+  <p class="text-xl md:text-2xl lg:text-3xl font-semibold">Ici tu peux modifier tes informations</p>
   </div>
   
   <div class="mt-7 md:mt-0">
