--- a/app/views/users/plans/show.html.erb
+++ b/app/views/users/plans/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container mx-auto mb-auto">
-  <%= render "users/users/welcome"%>
+  <%= render "welcome"%>
   <p class="mt-5 ml-5 md:ml-0">Généré le :</p>
         <!--card organization-->
   <div class="days flex items-center justify-center">
