--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,7 +28,7 @@
 						
 					</li>
 					<li class="sm:mr-8 mt-4 font-semibold highlight">
-					<%= link_to "Profil", current_user, class:"text-lg"%>
+					<%= link_to "Profil", user_path(current_user.id), class:"text-lg"%>
 			
 					</li>
 					<li class="sm:mr-8 mt-4 -mr-3">
