--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -67,6 +67,24 @@ footer {
   background-position: -100% 100%;
 }
 
+.bg-warning {
+  background-color: #DE734E;
+}
+
 // .highlightstatic {
 //   background-color:#6DD5BE;
 // }
+
+input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  .custom-number-input input:focus {
+    outline: none !important;
+  }
+
+  .custom-number-input button:focus {
+    outline: none !important;
+  }
