--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -23,7 +23,7 @@
               <li><span class="font-bold">Âge :</span><%= @user.age%></li>
               <li><span class="font-bold">E-mail :</span><%= @user.email%></li>
               </ul>
-              <%= link_to 'Modifier compte',edit_user_registration_path, class:"text-white  bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-1 py-1 md:mt-3 rounded outline-none focus:outline-none mr-1 mb-1" ,type:"button", style:"transition: all .15s ease" %>
+              <%= link_to 'Modifier infos',edit_user_path, class:"text-white  bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-1 py-1 md:mt-3 rounded outline-none focus:outline-none mr-1 mb-1" ,type:"button", style:"transition: all .15s ease" %>
 
             </div>
           </div>
