Changes to logo in nav, logo in footer + registration button is bigger outline-none to submit buttons

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,7 +44,7 @@
 
         <% end %>
         <div class="actions flex mt-5">
-          <%= button_to "Supprimer", registration_path(resource_name), data: { confirm: "Confirmer?" }, class:"text-white  bg-yellow-600 border border-solid border-yellow-600 hover:bg-yellow-700 active:bg-yellow-600 font-bold uppercase text-xs md:text-sm px-1 py-1 md:mt-3 rounded outline-none focus:outline-none mr-1 mb-1", method: :delete %></p>
+          <%= button_to "Supprimer", registration_path(resource_name), data: { confirm: "Confirmer?" }, class:"text-white focus:outline-none bg-yellow-600 border border-solid border-yellow-600 hover:bg-yellow-700 active:bg-yellow-600 font-bold uppercase text-xs md:text-sm px-1 py-1 md:mt-3 rounded outline-none focus:outline-none mr-1 mb-1", method: :delete %></p>
         </div>
       </div>
     </div>
