you can click on "Mealories" navbar to redirect to root_path

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,9 @@
       <%=link_to root_path do%>
     	<%= image_tag("logo_meal.png", size: "48x48") %>
       <% end %>
+      <%=link_to root_path do%>
       <h1 class="font-semibold select-none"><span class="text-primary-500">M</span>ealories</h1>
+      <%end%>
     </div>
   </div>
     
