Adding effect and shadow on hover for recipe cards

--- a/app/views/users/days/_card_recipe.html.erb
+++ b/app/views/users/days/_card_recipe.html.erb
@@ -1,5 +1,5 @@
-<div class="card">
-  <div class=" bg-gray-200 w-80 mr-5 shadow-2-xl rounded">
+<div class="card transform duration-200 ease-in hover:-translate-y-1">
+  <div class=" bg-gray-100 w-80 mr-5 hover:shadow-lg shadow-2-xl rounded">
         <%= image_tag day.lunch.image_url, style: 'height:100%;width:100%;margin-bottom:20px; border-radius:5px;' %>
     <div class=" py-4 px-3">
     <div class="flex flex-row items-center ">
@@ -21,8 +21,8 @@
 </div>
 
 
-<div class="card">
-  <div class=" bg-gray-200 w-80 mr-5 shadow-2-xl rounded">
+<div class="card mt-8 md:mt-0 transform duration-200 ease-in hover:-translate-y-1">
+  <div class=" bg-gray-100 w-80 mr-5 shadow-2-xl rounded hover:shadow-lg">
         <%= image_tag day.dinner.image_url, style: 'height:100%;width:100%;margin-bottom:20px; border-radius:5px;' %>
     <div class=" py-4 px-3">
     <div class="flex flex-row items-center ">
