--- a/app/views/users/days/show.html.erb
+++ b/app/views/users/days/show.html.erb
@@ -22,7 +22,7 @@
     </div>
   </div>
         <!--menu cards start--->
-  <div class="flex flex-row items-center justify-center ml-5 mt-16 mb-5">  
+  <div class="flex flex-col md:flex-row items-center justify-center ml-5 mt-16 mb-5">  
       <%= render 'users/days/card_recipe', day: @day %>   
   </div>  
 </div>
